--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       -->
 
     </div>
-    <!-- <button class="btn-country">Where am I?</button> -->
+    <button class="btn-country">Where am I?</button>
     <div class="images"></div>
   </main>
 </body>
